--- a/src/app/components/sport/item-sport/item-sport.component.html
+++ b/src/app/components/sport/item-sport/item-sport.component.html
@@ -7,7 +7,9 @@
 </div>
 <div class="sport content__body">
   <div class="one_col_container">
-    <router-outlet></router-outlet>
+    <app-item-sport-with-season
+    ></app-item-sport-with-season>
+    <!--    <router-outlet></router-outlet>-->
   </div>
 </div>
 
