--- a/src/app/components/sport/item-sport/with-teams/with-teams.component.html
+++ b/src/app/components/sport/item-sport/with-teams/with-teams.component.html
@@ -1,14 +1,14 @@
-@if (sportId$ | async; as id) {
-  @if (teams$ | async) {
-    <div class="tournament content__body">
-      <div class="one_col_container">
-        <app-list-of-teams
-          [sportId]="id"
-          [teams$]="teams$"
-          [formatPath]="teamItemHref"
-          [titleProperty]="islandTeamTitleProperty"
-        ></app-list-of-teams>
-      </div>
-    </div>
-  }
-}
+<!--@if (sportId$ | async; as id) {-->
+<!--  @if (teams$ | async) {-->
+<!--    <div class="tournament content__body">-->
+<!--      <div class="one_col_container">-->
+<!--        <app-list-of-teams-->
+<!--          [sportId]="id"-->
+<!--          [teams$]="teams$"-->
+<!--          [formatPath]="teamItemHref"-->
+<!--          [titleProperty]="islandTeamTitleProperty"-->
+<!--        ></app-list-of-teams>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  }-->
+<!--}-->
