--- a/src/app/components/sport/item-sport/item-sport.component.html
+++ b/src/app/components/sport/item-sport/item-sport.component.html
@@ -5,14 +5,7 @@
     <tui-loader [inheritColor]="true"></tui-loader>
   }
 </div>
-<div class="sport content__body">
-  <div class="one_col_container">
-    <app-item-sport-with-season
-    ></app-item-sport-with-season>
-    <!--    <router-outlet></router-outlet>-->
-  </div>
-</div>
-
+<router-outlet></router-outlet>
 
 <!--  <aside>-->
 <!--    <h4>ASIDE MENU</h4>-->
