--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -130,7 +130,7 @@
             [dialogId]="'addTeamToTournamentDialog' + tournament.id"
           ></app-create-button-show-dialog>
           <app-add-team-to-tournament
-            [tournamentId]="tournamentId"
+            [tournamentId]="tournament.id!"
             [dialogId]="'addTeamToTournamentDialog' + tournament.id"
             [allSportTeams$]="allSportTeams$"
             [teamsInTournament$]="teamsInTournament$"
