--- a/src/app/components/sport/item-sport/item-sport.component.html
+++ b/src/app/components/sport/item-sport/item-sport.component.html
@@ -1,27 +1,8 @@
-<div class="sport content__title">
-  @if (sport$ | async; as item) {
-    <h3 class="tui-text_h3">{{ item.title | uppercase }}</h3>
-  } @else {
-    <tui-loader [inheritColor]="true"></tui-loader>
-  }
-</div>
-<router-outlet></router-outlet>
-
-<!--  <aside>-->
-<!--    <h4>ASIDE MENU</h4>-->
-<!--    <hr>-->
-<!--    <router-outlet name="aside"></router-outlet>-->
-<!--&lt;!&ndash;    <app-season-dropdown></app-season-dropdown>&ndash;&gt;-->
-<!--    <a-->
-<!--      appearance="primary"-->
-<!--      href=""-->
-<!--      tuiButton-->
-<!--      type="button"-->
-<!--      class=""-->
-<!--    >-->
-<!--      Create-->
-<!--    </a>-->
-
-<!--  </aside>-->
-
-
+<!--<div class="sport content__title">-->
+<!--  @if (sport$ | async; as item) {-->
+<!--    <h3 class="tui-text_h3">{{ item.title | uppercase }}</h3>-->
+<!--  } @else {-->
+<!--    <tui-loader [inheritColor]="true"></tui-loader>-->
+<!--  }-->
+<!--</div>-->
+<!--<router-outlet></router-outlet>-->
