refactoring sport and sportnav

--- a/src/app/components/sport/sport-nav/sport-nav.component.html
+++ b/src/app/components/sport/sport-nav/sport-nav.component.html
@@ -1,6 +1,6 @@
-@if (sports$ | async) {
+@if (sports$ | async; as sports) {
   <app-header-menu
-    [dataList]="sports$"
+    [data]="sports"
     [mapItemToLabel]="mapItemToLabel"
     [mapItemToSportRoute]="sportRoutWithSeason"
     [mapItemToTeamsRoute]="sportTeamsRout"
