--- a/src/app/components/sport/item-sport/with-teams/with-teams.component.html
+++ b/src/app/components/sport/item-sport/with-teams/with-teams.component.html
@@ -2,12 +2,12 @@
   <div class="sport content__title">
     <h3 class="tui-text_h3">{{ sport.title | uppercase }}</h3>
   </div>
-  @if (teamsInSport$ | async) {
+  @if (teamsInSport$ | async; as teams) {
     <div class="tournament content__body">
       <div class="one_col_container">
         <app-list-of-teams
           [sportId]="sport.id!"
-          [teams$]="teamsInSport$"
+          [teams]="teams"
           [formatPath]="teamItemHref"
           [titleProperty]="islandTeamTitleProperty"
         ></app-list-of-teams>
