--- a/src/app/components/team/list-of-teams-with-city/list-of-teams-with-city.component.html
+++ b/src/app/components/team/list-of-teams-with-city/list-of-teams-with-city.component.html
@@ -1,12 +1,8 @@
-@if (teams$ | async; as team) {
-  <app-list-of-items-island
-    [data$]="teams$"
-    [paragraphProperty]="'city'"
-    [formatPath]="formatPath"
-    [titleProperty]="titleProperty"
-    [_size]="_size"
-    [hoverable]="hoverable"
-  ></app-list-of-items-island>
-} @else {
-  <tui-loader [inheritColor]="true"></tui-loader>
-}
+<app-list-of-items-island
+  [data]="teams"
+  [paragraphProperty]="'city'"
+  [formatPath]="formatPath"
+  [titleProperty]="titleProperty"
+  [_size]="_size"
+  [hoverable]="hoverable"
+></app-list-of-items-island>
