refactoring match with store

--- a/src/app/components/tournament/item-tournament/item-tournament.component.html
+++ b/src/app/components/tournament/item-tournament/item-tournament.component.html
@@ -30,7 +30,7 @@
               [action]="'add'"
               [dialogId]="'addDialog'"
               [tournamentId]="tournament.id"
-              [teams$]="teamsInTournament$"
+              [teams]="teams"
             ></app-add-edit-match>
           }
         } @else {
