--- a/src/app/components/match/add-edit-match/add-edit-match.component.html
+++ b/src/app/components/match/add-edit-match/add-edit-match.component.html
@@ -44,11 +44,11 @@
       ></tui-error>
     </div>
 
-    @if (teams$ | async) {
+    @if (teams) {
       <div class="tui-form__row" style="display: flex; justify-content: center;">
 
         <tui-select
-          *tuiLet="teams$ | async as items"
+          *tuiLet="teams"
           class="b-form"
           formControlName="team_a"
           style="padding-left: 10px; padding-right: 10px;"
@@ -58,7 +58,7 @@
             *tuiDataList
             size="l"
             [itemContent]="content"
-            [items]="items"
+            [items]="teams"
           ></tui-data-list-wrapper>
 
         </tui-select>
@@ -74,7 +74,7 @@
         </ng-template>
 
         <tui-select
-          *tuiLet="teams$ | async as items"
+          *tuiLet="teams"
           class="b-form"
           formControlName="team_b"
           style="padding-left: 10px; padding-right: 10px;"
@@ -84,7 +84,7 @@
             *tuiDataList
             size="l"
             [itemContent]="content"
-            [items]="items"
+            [items]="teams"
           ></tui-data-list-wrapper>
         </tui-select>
       </div>
