--- a/src/app/components/tournament/island-list-of-tournaments/island-list-of-tournaments.component.html
+++ b/src/app/components/tournament/island-list-of-tournaments/island-list-of-tournaments.component.html
@@ -2,13 +2,13 @@
   @for (item of data; track item.id) {
     <div class="item-with-data-island">
       <a
-        [href]="formatPath(item)"
         rel="noreferrer"
         [size]="_size"
         target="_self"
         tuiIsland
         textAlign="center"
         [hoverable]="hoverable"
+        (click)="navigateToTournamentItem(item)"
       >
         <div class="tui-island__content">
           <figure class="tui-island__figure">
