--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,7 @@
 <div class="super main_container">
   <tui-root>
     <app-header [title]="title"></app-header>
-    <div style="margin: 0; padding: 0;">
-      <!--      @if (breadcrumbs$ | async; as breadcrumbs) {-->
-      <!--        @for (breadcrumb of breadcrumbs; track $index) {-->
-      <!--          <div>-->
-      <!--            test-->
-      <!--            <a [routerLink]="breadcrumb.routerLink">{{ breadcrumb.caption }}</a>-->
-      <!--          </div>-->
-      <!--        }-->
-      <!--      } @else {-->
-      <!--        No Links-->
-      <!--      }-->
+    <div style="margin: 0; padding-left: 15px;">
       <tui-breadcrumbs
         size="l"
         class="tui-space_top-2"
@@ -44,26 +34,6 @@
     <!--        >BACK-->
     <!--        </button>-->
     <!--      }</div>-->
-    <!--    <tui-breadcrumbs-->
-    <!--      size="l"-->
-    <!--      class="tui-space_top-2"-->
-    <!--    >-->
-    <!--      @if (breadcrumbs$ | async; as bread) {-->
-    <!--        @for (item of bread; track trackByFunction) {-->
-    <!--          <ng-container>-->
-    <!--            <a-->
-    <!--              *tuiItem-->
-    <!--              tuiLink-->
-    <!--              [routerLink]="item.routerLink"-->
-    <!--            >-->
-    <!--              {{ item.caption }}-->
-    <!--            </a>-->
-    <!--          </ng-container>-->
-    <!--        }-->
-    <!--      } @else {-->
-    <!--        <tui-loader></tui-loader>-->
-    <!--      }-->
-    <!--    </tui-breadcrumbs>-->
     <main>
       <div class="main container">
         <div class="main content">
