--- a/src/app/components/match-scoreboard-admin/match-scoreboard-admin.component.html
+++ b/src/app/components/match-scoreboard-admin/match-scoreboard-admin.component.html
@@ -1,1 +1,4 @@
 <p>match-scoreboard-admin works!</p>
+<button (click)="sendMessageToServer()">Send Message</button>
+<button (click)="sendMessageTwoToServer()">Send Message Two</button>
+<button (click)="increaseScoreTeamA()">Increase Team A Score</button>
