--- a/src/app/components/match-scoreboard-admin/match-scoreboard-admin.component.html
+++ b/src/app/components/match-scoreboard-admin/match-scoreboard-admin.component.html
@@ -1,4 +1,39 @@
-<p>match-scoreboard-admin works!</p>
-<button (click)="sendMessageToServer()">Send Message</button>
-<button (click)="sendMessageTwoToServer()">Send Message Two</button>
-<button (click)="increaseScoreTeamA()">Increase Team A Score</button>
+@if (loading$| async; as loading) {
+  loading
+} @else {
+  loaded
+}
+
+
+@if (data$ | async; as data) {
+  <p>status code: {{ data.status_code }}</p>
+  <p>date: {{ data.match.match_date }}</p>
+  <p>id: {{ data.match_data?.id }}</p>
+  <p>score: {{ data.match_data?.score_team_a }} : {{ data.match_data?.score_team_b }}</p>
+}
+
+@if (vm$ | async; as vm) {
+  <p>test one</p>
+  <p>date: {{ vm.match?.match_date }}</p>
+  <p>id: {{ vm.matchData?.id }}</p>
+  <p>score: {{ vm.matchData?.score_team_a }} : {{ vm.matchData?.score_team_b }}</p>
+}
+
+@if (matchData$|async; as matchData) {
+  <p>match-scoreboard-admin works!</p>
+  <button (click)="adjustScore('a', -1)(matchData)">-1 Home Team</button>
+  <button (click)="adjustScore('a', 1)(matchData)">+1 Home Team</button>
+
+} @else {
+  <p>loading...</p>
+}
+
+@if (match$ | async; as match) {
+  <p>date: {{ match.match_date }} {{ match.id }}</p>
+  @if (matchData$| async; as matchData) {
+    <p>score</p>
+    <p>{{ matchData.score_team_a }} : {{ matchData.score_team_b }}</p>
+  } @else {
+    <p>loading...</p>
+  }
+}
