--- a/src/styles.less
+++ b/src/styles.less
@@ -1,5 +1,7 @@
 @import '@taiga-ui/core/styles/taiga-ui-local.less';
 @import '@taiga-ui/styles/taiga-ui-global';
+@import "fonts.css";
+
 
 router-outlet {
   display: none;
