match scoreboard websocket postgres trigger added

--- a/src/app/components/match-scoreboard-admin/match-scoreboard-admin.component.html
+++ b/src/app/components/match-scoreboard-admin/match-scoreboard-admin.component.html
@@ -521,7 +521,7 @@
           class="settings-show-hide-btn"
           type="button"
           data-field-name="Qtr"
-          (click)="toggleQuarterVisibility(data)"
+          (click)="toggleQuarterVisibility(data.scoreboard_data!)"
         >{{ data.scoreboard_data?.is_qtr ? 'Hide Qtr Field' : 'Show Qtr Field' }}
         </button>
         <button
